Moved lossed notes back into _map file

--- a/templates/includes/_map.html
+++ b/templates/includes/_map.html
@@ -1,4 +1,4 @@
-<!-------------------- Contains notes from pair programming after example was already written --------------------------->
+<!-------------------- Contains notes from pair programming  --------------------------->
 <html lang="en">
 
 <head>
