Including notes and comments

--- a/templates/includes/_map.html
+++ b/templates/includes/_map.html
@@ -1,4 +1,4 @@
-<!-------------------- Contains notes from pair programming  --------------------------->
+<!--------------------- Contains notes from pair programming  --------------------------->
 <html lang="en">
 
 <head>
