Removed ads, space for predictions

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -56,18 +56,18 @@ We have this file so it needs to be rendered only once.-->
         {% block content_forecasts %}
         {% endblock %}
 
-        <!-- RIGHT TOP- ADS Header -->
+        <!-- RRIGHT SIDE BAR Header -->
         <div class="grid-super_right_header">
           <div class="right-header">
             <ul>
-              <li>Ads</li>
+              <li>Predictions</li>
             </ul>
           </div>
         </div>
 
         <!--RIGHT-->
         <div class="grid-super_right">
-            {% include 'includes/_ads.html' %}
+            {% include 'includes/_prediction.html' %}
         </div>
 
         <!--FOOTER-->
